<resources>
    <string name="app_name">Hospedaje</string>
    <string name="tvBienvenida">Bienvenido a mi hospedaje</string>
    <string name="btnPersona">Registrar</string>
    <string name="btnTransaccion">Transaccion</string>
    <string name="btnVolver">Volver</string>
    <!--Persona-->
    <string name="tvTituloPersona">Registro de Persona</string>
    <string name="etNombres">Introduzca su Nombre</string>
    <string name="etApellidos">Introduzca su apellido</string>
    <string name="etDocumento">Coloque el documento</string>
    <string name="btnCambio">Cambio</string>

    <!--Transaccion-->
    <string-array name="Divisas">
        <item>COP</item>
        <item>USD</item>
        <item>EURO</item>
    </string-array>
    <string name="etMonto">Coloque el monto</string>
    <string name="etTasa">Tasa de Cambio</string>
    <string name="tvVacios"></string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnListar">Mostrar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnDeshabilitar">Deshabilitar</string>
</resources>