<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".RegistroPersona"
    android:backgroundTint="@color/white">


    <TextView
        android:id="@+id/tvTituloPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvTituloPersona"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnCambio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/aguamarinaO"
        android:textColor="@color/white"
        android:text="@string/btnCambio"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnVolver1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/aguamarinaO"
        android:text="@string/btnVolver"
        android:padding="10dp"
        android:layout_marginTop="20dp" />

</LinearLayout>
