<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".transaccion">

    <Spinner
        android:id="@+id/spOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Divisas"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Divisas"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etMonto"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etTasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etTasa"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/btnTransaccion" />
</LinearLayout>